# synthetic-data-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-release.yml  rust-test.yml
src/: command_line.rs  main.rs
src/entities/: dataset.rs  mod.rs  schema_field_implementation.rs  schema_implementation.rs
src/entities/distribution/: default_distribution.rs  distribution.rs  mod.rs
src/persistence/: mod.rs
