[package]
name = "synthetic-data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0.66"
rand = "0.8.5"
log = "0.4.0"
env_logger = "0.10"
statrs = "0.16"
indicatif = { version = "0.17.2", featreus = ["rayon"]}

uuid = { version = "1.2.1", features = ["v4"] }
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
